# medicine

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  app.py  crud.py  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  readme.md  requirements.txt  schemas.py
templates/: index.html
