[tool.poetry]
name = "medicine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
anyio = "4.3.0"
click = "8.1.7"
colorama = "0.4.6"
fastapi = "0.110.2"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.7"
neo4j = "5.19.0"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.1"
sniffio = "1.3.1"
starlette = "0.37.2"
typing-extensions = "4.11.0"
uvicorn = "0.29.0"
watchfiles = "0.21.0"
websockets = "12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
